[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "OneTrainer"
requires-python = ">=3.10,<3.14"
version = "0.1.0"

dependencies = [
    # base requirements
    "numpy==2.2.6",
    "opencv-python==4.11.0.86",
    "pillow==12.2.0",
    "imagesize==1.4.1",
    "tqdm==4.67.1",
    "pyyaml==6.0.2",
    "huggingface-hub==0.34.4",
    "scipy==1.15.3",
    "matplotlib==3.10.3",
    "av==16.1.0",
    "yt-dlp",
    "scenedetect==0.6.7.1",
    "parse==1.20.2",
    "setuptools==81.0.0",

    # pytorch
    "accelerate==1.12.0",
    # RC Required for the `diffusers` commit we use, update when released
    "safetensors==0.8.0rc0",
    "tensorboard==2.20.0",

    # diffusion models
    "diffusers @ git+https://github.com/huggingface/diffusers.git@0f1abc4ae8b0eb2a3b40e82a310507281144c423",
    "gguf==0.17.1",
    "transformers==4.57.6",
    "sentencepiece==0.2.1",  # transitive dependency of transformers for tokenizer loading
    "omegaconf==2.3.0", # needed to load stable diffusion from single ckpt files
    "invisible-watermark==0.2.0", # needed for the SDXL pipeline

    # other models
    "pooch==1.8.2",
    "open-clip-torch==2.32.0",

    # data loader
    "mgds @ git+https://github.com/Nerogar/mgds.git@9320a696309d21776ed7b5b1f66b05c66e9b5484",

    # optimizers
    "dadaptation==3.2",
    "lion-pytorch==0.2.3",
    "prodigyopt==1.1.2",
    "schedulefree==1.4.1",
    "pytorch-optimizer==3.6.0",
    "prodigy-plus-schedule-free==2.0.1",
    "adv-optm==2.2.3",
    "muon-optimizer @ git+https://github.com/KellerJordan/Muon.git@f90a42b28e00b8d9d2d05865fe90d9f39abcbcbd",

    # profiling
    "scalene==2.0.1",

    # ui
    "customtkinter==5.2.2",

    # cloud
    "runpod==1.7.10",
    "fabric==3.2.2",

    # debug
    "psutil==7.0.0",
    "requests==2.32.5",
    "deepdiff==8.6.1", # output easy to read diff for troublshooting
]

[project.optional-dependencies]
cpu = [
  "torch==2.9.1",
  "torchvision==0.24.1",
  "onnxruntime==1.23.2",
]

cuda = [
  # pytorch
  "torch==2.9.1",
  "torchvision==0.24.1",
  "onnxruntime-gpu==1.23.2",
  "nvidia-nccl-cu12==2.27.5; sys_platform == 'linux'",
  "triton-windows==3.5.1.post24; sys_platform == 'win32'",

  # optimizers
  "bitsandbytes==0.49.2",
]

rocm = [
  # pytorch
  "torch==2.9.1",
  "torchvision==0.24.1",
  "onnxruntime==1.23.2",

  # optimizers
  "bitsandbytes==0.49.2",
]

[tool.setuptools]
packages = []

[tool.ruff]
extend-exclude = [
    # Exclude all third-party dependencies and environments.
    # NOTE: Conda installs mgds+diffusers into "src/" in the project directory.
    ".venv*",
    "venv*",
    "conda_env*",
    "src",
    # Do not lint the universal Python 2/3 version checker.
    "scripts/util/version_check.py",
]
line-length = 120

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "UP", "YTT", "BLE", "C4", "T10", "ISC", "ICN", "PIE", "PYI", "RSE", "RET", "SIM", "PGH", "FLY", "NPY", "PERF"]
ignore = ["BLE001", "E402", "E501", "B024", "PGH003", "RET504", "RET505", "SIM102", "UP015", "PYI041"]

[tool.ruff.lint.isort.sections]
hf = ["diffusers*", "transformers*"]
mgds = ["mgds"]
torch = ["torch*"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ruff.lint.isort]
known-first-party = ["modules"]
section-order = [
    "future",
    "standard-library",
    "first-party",
    "mgds",
    "torch",
    "hf",
    "third-party",
    "local-folder",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]
requires-pixi = ">=0.69.0"
exclude-newer = "2w"

[tool.pixi.tasks]
train = { cmd = "python scripts/train.py", cwd = "." }
ui = { cmd = "python scripts/train_ui.py", cwd = "." }

[tool.pixi.feature.cuda]
platforms = ["linux-64", "win-64"]

[tool.pixi.feature.cuda.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/cu128"]

[tool.pixi.feature.cuda.system-requirements]
cuda = "12.8"

[tool.pixi.feature.rocm]
platforms = ["linux-64"]

[tool.pixi.feature.rocm.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/rocm6.3"]

[tool.pixi.feature.cpu.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/cpu"]

[tool.pixi.dependencies]
python = "3.13.*"
compilers = "*"

[tool.pixi.target.linux-64.dependencies]
tk = { version = "*", build = "xft_*" }
libgl = "*"
libglib = "*"

[tool.pixi.system-requirements]
linux = "5.17"
libc = { family="glibc", version="2.28" }
macos  = "15.0"

[tool.pixi.pypi-options]
index-strategy = "unsafe-best-match"

[tool.pixi.environments]
cpu = ["cpu"]
cuda = ["cuda"]
rocm = ["rocm"]
